--- a/src/component/main-layout/component/navbar-info/navbar-info.scss
+++ b/src/component/main-layout/component/navbar-info/navbar-info.scss
@@ -41,7 +41,20 @@
                 top: 50%;
                 left: 62%;
                 transform: translate(-50%, -50%);
-                font-size: x-small;
+                font-size: small;
+    
+                /* Add these properties for text truncation */
+                white-space: nowrap; /* Prevents the text from wrapping */
+                overflow: hidden; /* Ensures that overflow is hidden */
+                text-overflow: ellipsis; /* Adds an ellipsis at the point of truncation */
+                max-width: 70px; /* Adjust this width as needed */
+
+                /* Fix the font size using viewport units */
+                font-size: 2.5vw; /* You can adjust this value */
+                
+                /* Disable zoom from changing the font size */
+                -webkit-text-size-adjust: 100%;
+                -ms-text-size-adjust: 100%;
             }
         }
 
@@ -58,9 +71,22 @@
                 color: gold;
                 position: absolute;
                 top: 50%;
-                left: 60%;
+                left: 62.5%;
                 transform: translate(-50%, -50%);
-                font-size: x-small;
+                font-size: small;
+    
+                /* Add these properties for text truncation */
+                white-space: nowrap; /* Prevents the text from wrapping */
+                overflow: hidden; /* Ensures that overflow is hidden */
+                text-overflow: ellipsis; /* Adds an ellipsis at the point of truncation */
+                max-width: 70px; /* Adjust this width as needed */
+
+                /* Fix the font size using viewport units */
+                font-size: 2.5vw; /* You can adjust this value */
+                
+                /* Disable zoom from changing the font size */
+                -webkit-text-size-adjust: 100%;
+                -ms-text-size-adjust: 100%;
             }
         }
 
@@ -89,79 +115,6 @@
             }
         }
 
-    }
-}
-
-.btn-login {
-    padding: 12px;
-    color: var(--secondary-color);
-    border: 2px solid var(--primary-color);
-    border-radius: 8px;
-    transition: all 0.5s;
-    cursor: pointer;
-    gap: 5px;
-
-    :is(&:hover, &:active) {
-        filter: brightness(2);
-    }
-}
-
-.h-info-container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    .logo-container {
-        width: 30%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        .logo-img {
-            height: 100%;
-            aspect-ratio: 3/1;
-        }
-    }
-
-    .menu-container {
-        width: 30%;
-        height: 100%;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-
-        .player-btn-container {
-            height: 60%;
-            aspect-ratio: 5/1;
-            position: relative;
-
-            .player-btn-img {
-                height: 100%;
-                aspect-ratio: 4/1;
-            }
-
-            .player-text {
-                color: gold;
-                position: absolute;
-                top: 50%;
-                left: 55%;
-                transform: translate(-50%, -50%); 
-            }
-        }
-        .setting-btn-container {
-            height: 40%; /* Adjust this value to make the container smaller */
-            aspect-ratio: 1/1;
-            cursor: pointer;
-        }
-        
-        .setting-btn-img {
-            width: 40%;
-            aspect-ratio: 1/1; 
-            cursor: pointer;
-        }
     }
 }
 
