--- a/src/component/main-layout/component/navbar/navbar.scss
+++ b/src/component/main-layout/component/navbar/navbar.scss
@@ -81,10 +81,10 @@
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    //justify-content: center;
+    //align-items: center;
     //background: linear-gradient(to right, #4a0100, #ce0100, #ce0100, #4a0100);
-    background-image: url('https://miniworldcup1.sgp1.digitaloceanspaces.com/BWG/hearderbackground/headerbackground.png');
+    background-image: url('https://game-platform.sgp1.digitaloceanspaces.com/GALAXY0001/background/navbar.png');
     background-size: cover; /* Ensures the background image covers the entire container */
     background-repeat: no-repeat; /* Prevents the background image from repeating */
     background-position: center; /* Centers the background image */
@@ -95,6 +95,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-left: 5%;
 
         .logo-img {
             height: 100%;
@@ -113,30 +114,64 @@
             height: 60%;
             aspect-ratio: 5/1;
             position: relative;
+            margin-top: 5%;
+            margin-left: 5%;
 
             .deposit-btn-img {
-                margin-left: 10%;
-                width: 70%;
+                width: 40%;
                 height: 100%;
+                cursor: pointer;
             }
             
             .deposit-arrow-img {
-                margin-left: 7%;
+                margin-left: 5%;
+                margin-right: 5%;
                 width: 7.5%;
                 height: 100%;
             }
 
+            .deposit-text {
+                color: gold;
+                position: absolute;
+                top: 50%;
+                left: 97.5%;
+                transform: translate(-50%, -50%); 
+    
+                /* Add these properties for text truncation */
+                white-space: nowrap; /* Prevents the text from wrapping */
+                overflow: hidden; /* Ensures that overflow is hidden */
+                text-overflow: ellipsis; /* Adds an ellipsis at the point of truncation */
+                max-width: 150px; /* Adjust this width as needed */
+
+                /* Fix the font size using viewport units */
+                font-size: 1.2vw; /* You can adjust this value */
+                
+            }
+
             .player-btn-img {
                 height: 100%;
-                aspect-ratio: 4/1;
+                cursor: pointer;
             }
+
             .player-text {
                 color: gold;
                 position: absolute;
                 top: 50%;
-                left: 55%;
+                left: 40%;
                 transform: translate(-50%, -50%); 
+    
+                /* Add these properties for text truncation */
+                white-space: nowrap; /* Prevents the text from wrapping */
+                overflow: hidden; /* Ensures that overflow is hidden */
+                text-overflow: ellipsis; /* Adds an ellipsis at the point of truncation */
+                max-width: 150px; /* Adjust this width as needed */
+
+                /* Fix the font size using viewport units */
+                font-size: 1.2vw; /* You can adjust this value */
                 
+                /* Disable zoom from changing the font size */
+                -webkit-text-size-adjust: 100%;
+                -ms-text-size-adjust: 100%;
             }
         }
         .setting-btn-container {
