--- a/src/page/home-page/home-page.scss
+++ b/src/page/home-page/home-page.scss
@@ -255,7 +255,7 @@
         display: flex;
         justify-content: center;
         //align-items: center;
-        margin-bottom: 5%;
+        //margin-bottom: 5%;
 
         .lb-game-cat-container {
             width: 15%;
