--- a/src/page/suggestion/suggestion.scss
+++ b/src/page/suggestion/suggestion.scss
@@ -2,7 +2,7 @@
     padding: 20px 0;
   
     .header {
-      color: var(--color);
+      color: var(--primary-color);
       font-size: 18px;
       font-weight: 800;
     }
