--- a/src/component/main-layout/component/navbar-info/navbar-info.scss
+++ b/src/component/main-layout/component/navbar-info/navbar-info.scss
@@ -99,6 +99,7 @@
                 margin-left: 10%;
                 width: 70%;
                 height: 100%;
+                filter: grayscale(1);
             }
             .deposit-arrow-img {
                 margin-left: 7%;
